<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".settings.view.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#F52354BA"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="#F51F4DAC"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton

                    android:id="@+id/englishRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/arabicRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#FA6739"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="#E35E34"
                />

                <RadioButton
                    android:id="@+id/mapRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:layout_margin="20dp"
                    android:textColor="@color/white"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#F52354BA"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/units"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="#F51F4DAC"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >


                <RadioButton
                    android:id="@+id/celsiusRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/fahrenheitRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/kelvinRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>