<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeRoot"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/display_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weather_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="#FF9800"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/city_name"
                    app:layout_constraintStart_toStartOf="@+id/city_name"
                    app:layout_constraintTop_toBottomOf="@+id/city_name" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintEnd_toStartOf="@+id/temperature"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_date"
                    app:srcCompat="@android:mipmap/sym_def_app_icon" />

                <TextView
                    android:id="@+id/weather_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/weather"
                    android:textColor="#FF5722"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/weather_icon"
                    app:layout_constraintStart_toStartOf="@+id/weather_icon"
                    app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

                <TextView
                    android:id="@+id/temprature_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/c"
                    android:textColor="#FF9800"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/temperature"
                    app:layout_constraintTop_toTopOf="@+id/temperature" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/temp"
                    android:textColor="#FA6739"
                    android:textSize="120sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/weather_icon"
                    app:layout_constraintTop_toBottomOf="@+id/weather_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/display_current">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHours" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvDays">


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FA6739"
                    android:columnCount="3"
                    android:rowCount="2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/pressure_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/pressure_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_pressure_svgrepo_com"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/pressure_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/pressure_icon"
                            app:layout_constraintStart_toStartOf="@+id/pressure_icon"
                            app:layout_constraintTop_toBottomOf="@+id/pressure_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/humidity_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">


                        <ImageView
                            android:id="@+id/humidity_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_humidity_svgrepo_com"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/humidity_icon"
                            app:layout_constraintStart_toStartOf="@+id/humidity_icon"
                            app:layout_constraintTop_toBottomOf="@+id/humidity_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/wind_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/wind_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_wind_svgrepo_com"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/wind_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/wind_icon"
                            app:layout_constraintStart_toStartOf="@+id/wind_icon"
                            app:layout_constraintTop_toBottomOf="@+id/wind_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cloud_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/cloud_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_baseline_cloud_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cloud_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/cloud_icon"
                            app:layout_constraintStart_toStartOf="@+id/cloud_icon"
                            app:layout_constraintTop_toBottomOf="@+id/cloud_icon" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/ultra_violate_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/ultra_violette_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_baseline_watch_later_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/ultra_violette_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/ultra_violette_icon"
                            app:layout_constraintStart_toStartOf="@+id/ultra_violette_icon"
                            app:layout_constraintTop_toBottomOf="@+id/ultra_violette_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/visibility_constraint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/visibility_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:src="@drawable/ic_baseline_visibility_24"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_visibility_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/value"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/visibility_icon"
                            app:layout_constraintStart_toStartOf="@+id/visibility_icon"
                            app:layout_constraintTop_toBottomOf="@+id/visibility_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </GridLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>